welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:10: error: Non-zero integral values may not have a leading zero.
  return 7:00
           ^alarmClock:10: error: identifier expected but something found.
  return 7:00
           ^